commin three changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 <div class="form"><form action="./index.html">
     
-        <h2 style="color: red;">PLEASE REGISTER HERE</h2><hr>
+        <h2 style="color: salmon;">PLEASE REGISTER HERE</h2><hr>
         <br>
         <label for="name">First name:</label>
         <br>
